# Schediora

./: README.md
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260217_0001_init_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: ai.py  auth.py  dashboard.py  health.py  plans.py  router.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: __init__.py
backend/app/db/models/: __init__.py  models.py
backend/app/schemas/: ai.py  auth.py  dashboard.py  plans.py  users.py
backend/app/services/: ai_plan_formatter.py  ai_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: ai_tasks.py
backend/tests/unit/: test_health_contract.py
docs/: README.md  ai-architecture.md  ai-local-model-setup.md  ai-prd.md  backend-architecture.md  backend-prd.md  backend-runbook.md  frontend-architecture.md  frontend-prd.md  frontend-runbook.md  setup-end-to-end.md
mobile/: App.tsx  app.json  jest.config.js  jest.setup.js  package.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/ios/: Podfile
mobile/ios/Schediora/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mobile/ios/Schediora.xcodeproj/: project.pbxproj
mobile/ios/Schediora.xcworkspace/: contents.xcworkspacedata
mobile/src/app/navigation/: AuthStack.tsx  MainTabs.tsx  OnboardingStack.tsx  RootNavigator.tsx  types.ts
mobile/src/app/providers/: AppProviders.tsx  useAppSessionStore.ts
(+28 files in other folders)
